Fixed vertical scrollbar on inner div issue

--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -230,21 +230,19 @@
         align-items: center;
         justify-content: center;
         .c {
-            position: absolute;
+            position: relative;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            height: 92%;
+            height: 215px;
             width: 90%;
             border-radius: 12px;
             box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
         }
         .projects-container-front {
-            display: flex;
-            flex-direction: column;
+            position: absolute;
             align-items: center;
-            justify-content: flex-end;
-            object-fit: contain;
+            justify-content: flex-end;      
             .project-title-front {
                 position: relative;
                 color: #252934;
@@ -266,8 +264,7 @@
         }
         .projects-container-back {
             position: relative;
-            display: flex;
-            flex-direction: column;
+            z-index: 999;
             justify-content: start;
             align-items: center;
             .project-title {
@@ -283,7 +280,7 @@
             .project-information-container {
                 overflow-y: scroll;
                 width: 95%;
-                height: 25vh;
+                height: 25vh;  
                 .project-information-text {
                     padding-left: 10%;
                     padding-right: 10%;
@@ -293,8 +290,8 @@
     }
 }
 .page-3 {
-    background-color: #252934;
     position: relative;
+    background-color: #252934;
     display: flex;
     flex-direction: column;
     width: 100%;
